# A2USB

./: .gitignore  CMakeLists.txt  HwModding.md  LICENSE  README.md
BUILD-USB-MOUSE-4ns/: README.md
CAD/A2USB_IRQExtension/: A2USB_IRQExtension.kicad_pcb  A2USB_IRQExtension.kicad_prl  A2USB_IRQExtension.kicad_pro  A2USB_IRQExtension.kicad_sch
PLD/: A2USB.PLD  A2USBPALv1.jed
common/: abus-8ns.pio  abus-gs-8ns.pio  abus.c  buffers.c  buffers.h  build.h  config.c  dmacopy.h  flash.c  flash.h  main.c
lib/: a2platform.h
lib/a2vga/: a2vga.cmake  a2vga.h
lib/a2vga/common/: abus-4ns.pio  abus-8ns.pio  abus-gs-4ns.pio  abus.c  abus.h  buffers.c  buffers.h  cfgtoken.h  config.h  main.c  modes.h
lib/dma/: dmacopy.c  dmacopy.h
mouse/: MouseInterfaceCard.c  MouseInterfaceCard.h  MouseInterfaceROM.h  PIA6520.c  PIA6520.h
source/: main.c
source/mouse/: MouseInterfaceCard.c  MouseInterfaceROM.h  PIA6520.c  PIA6520.h
source/usb/: businterface.c  hid_app.c  usb.c  usb.h
source/util/: logger.h  profiler.h
test/: MOUSE.CLAMP.asm  MOUSE.DRAW.basic  MOUSE.HDRAW.basic  MOUSE.MENU.basic  MOUSE.MOVE.basic  MOUSE.SAMPLE.asm
usb/: businterface.c  hid_app.c  usb.c  usb.h
